# backend/public/swagger.json
@@ -65,6 +65,19 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"Prisma.BatchPayload": {
+				"properties": {
+					"count": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"count"
+				],
+				"type": "object",
+				"description": "Batch Payload for updateMany & deleteMany & createMany"
+			},
 			"CreateSpentCategory": {
 				"properties": {
 					"description": {
@@ -521,6 +534,28 @@
 						}
 					}
 				]
+			}
+		},
+		"/spent/topending": {
+			"put": {
+				"operationId": "UpdateAllToPending",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Prisma.BatchPayload"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Spent"
+				],
+				"security": [],
+				"parameters": []
 			}
 		},
 		"/spentcategory": {
